# backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  good_food_frontend_workflow.yaml  pyproject.toml  pytest.ini  setup.cfg
backend/: Dockerfile  manage.py  pyproject.toml  pytest.ini  schema.yml
backend/api/: exception_handlers.py  filters.py  mixins.py  orders_serializers.py  orders_views.py  pagination.py  permissions.py  permissions_products.py  products_serializers.py  products_urls.py  products_views.py  recipes_serializers.py  recipes_views.py  reviews_serializers.py  reviews_views.py  serializers.py  serializers_products.py  urls.py  urls_products.py  users_serializers.py  users_urls.py  users_views.py  views_products.py
backend/core/: loggers.py  models.py  utils.py
backend/data/: category.csv  components.csv  data.txt  delivery_points.csv  producer.csv  products.csv  products_components.csv  products_promotions.csv  products_tags.csv  promotions.csv  subcategory.csv  tags.csv  users.csv
backend/export/: components.csv  delivery_points.csv  export.txt  producer.csv  products.csv  products_components.csv  products_promotions.csv  products_tags.csv  promotions.csv  subcategory.csv  tags.csv  users.csv
backend/good_food/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
backend/healthy_food/: asgi.py  settings.py  urls.py  wsgi.py
backend/orders/: admin.py  models.py  orders.py  shopping_carts.py  signals.py
backend/orders/migrations/: 0001_initial.py  0002_alter_order_address.py  0002_alter_shoppingcart_options_and_more.py  0002_initial.py  0003_initial.py  0004_alter_order_status.py  0004_alter_shoppingcart_created.py  0004_remove_order_order_number.py  0005_alter_order_payment_method.py  0005_alter_shoppingcart_user.py  0005_order_order_number.py  0006_order_user.py  (+10 more)
backend/payments/: urls.py  views.py
backend/products/: admin.py  models.py
backend/recipes/: admin.py  models.py
backend/reviews/: admin.py  models.py
backend/templates/: cancel.html  cancelled.html  home.html  success.html
backend/tests/: conftest.py  fixture_data.py  fixtures.py  test_order.py  test_shopping_cart.py  test_user.py
backend/users/: admin.py  models.py  utils.py  views.py
(+58 files in other folders)
