[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Артём Говорливых <govorlivyh@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
